<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_30sdp"
    android:paddingRight="@dimen/_30sdp">


    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/deskexecutive"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:text="@string/powertoyou"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/enterotptext"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/edt_verify_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_graycorner"
        android:hint="@string/verifiy_otp"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_redbtn"
        android:text="@string/verify"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/resend_otp" />
</LinearLayout>
