<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_name"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_guest_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/guest_name"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/guest_contact_no"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_guest_contact_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/guest_contact_no"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/trip_start_date"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_trip_start_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/trip_start_date"
            android:textSize="@dimen/_14sdp"
            android:inputType="datetime"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/trip_end_date"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_trip_enddate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/trip_end_date"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/driver_name"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_driver_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/driver_name"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/car_number"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_car_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/car_number"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/status"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:hint="@string/status"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_redbtn"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_cancel_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/button_singup"
            android:text="@string/cancel_trip"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_change_car_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/button_singup"
            android:text="@string/change_car_driver"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/button_singup"
            android:text="@string/tracking"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/button_singup"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/button_singup"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>

