<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">


    <include layout="@layout/layout_bookcar_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_type"
            android:textSize="@dimen/_14sdp" />

        <Spinner
            android:id="@+id/spinner_car_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_graycorner" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/from"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/txt_bookcar_from_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:hint="@string/select_date"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/to"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/txt_bookcar_to_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_graycorner"
            android:gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:text="@string/select_date"
            android:textSize="@dimen/_14sdp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_bookcar_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:layout_weight="1"
        android:background="@color/button_singup"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>
