<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:weightSum="3">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_red_dark"
            android:checked="true"
            android:text="@string/booked" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/bluecolor"
            android:checked="true"
            android:text="@string/buffer_time" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/green"
            android:checked="true"
            android:text="@string/available" />
    </LinearLayout>

</android.support.v7.widget.CardView>
