<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_name"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tv_car_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_graycorner"
        android:gravity="center_vertical"
        android:padding="@dimen/_10sdp"
        android:text="Audi A1"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/car_type"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tv_car_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_graycorner"
        android:gravity="center_vertical"
        android:padding="@dimen/_10sdp"
        android:text="Hatchback"
        android:textSize="@dimen/_14sdp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/driver_name"
        android:textSize="@dimen/_14sdp" />

    <Spinner
        android:id="@+id/sp_driver_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_graycorner" />

    <Button
        android:id="@+id/btn_assign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_redbtn"
        android:text="@string/assign"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>