<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_centerInParent="true"
        android:background="#ffffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_graycorner"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/cancel_booking_message"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/cancel_booking_confirm_message"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Request id is 12345"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_submit_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_redbtn"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/confirm"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_cancel_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_redbtn"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_right_icon" />

    </FrameLayout>
</RelativeLayout>