<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_50sdp">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:gravity="center"
                    android:text="@string/deskexecutive"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tv_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_text"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/powertoyou"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/bg_graycorner"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/ic_user" />

                <EditText
                    android:id="@+id/et_user_contactno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/mobileno"
                    android:inputType="number"

                    android:maxLength="10"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/bg_graycorner"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/ic_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:id="@+id/img_password_show"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_eye_hide" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_redbtn"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
